--- a/src/scss/components/_team.scss
+++ b/src/scss/components/_team.scss
@@ -75,18 +75,7 @@
     }
 
     ul {
-        font-family: TTNorms;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 20px;
-        line-height: 30px;
-        margin-bottom: 10px;
-        padding-left: 20px;
-
-        @media only screen and (max-width: $sm) {
-            font-size: 16px;
-            line-height: 150%;
-        }
+        margin: 25px 0 10px;
     }
 
     p {
