Created Face Page and did CSS, changed header

--- a/src/scss/base/_universalStyles.scss
+++ b/src/scss/base/_universalStyles.scss
@@ -699,3 +699,9 @@ strong, b {
     padding: 0;
   }
 }
+
+.img-bordered {
+  padding: 19px;
+  background-color: white;
+  border: 2px solid $wheat;
+}
