--- a/src/scss/components/_skincare.scss
+++ b/src/scss/components/_skincare.scss
@@ -97,9 +97,7 @@
     }
 
     .carousel-item {
-        background: white;
-        padding: 15px;
-        border: 1px solid $wheat;
+        @extend .img-bordered;
     }
 }
 
