--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -10,3 +10,4 @@
 @import "./components/gallery";
 @import "./components/philosophy";
 @import "./components/skincare";
+@import "./components/face";
