--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -310,10 +310,10 @@ strong, b {
   border-right: 3px solid #F4D1AE;
 }
 
-.img-hover, .gallery img {
+.img-hover, .face__gallery img, .gallery img {
   transition: all 0.5s ease;
 }
-.img-hover:hover, .gallery img:hover {
+.img-hover:hover, .face__gallery img:hover, .gallery img:hover {
   transform: scale(1.05);
   transition: all 0.5s ease;
 }
@@ -689,6 +689,13 @@ strong, b {
   padding: 0;
 }
 
+.img-bordered, .face__gallery img, .before-after__slider .carousel-item,
+.videos__slider .carousel-item, .gallery img {
+  padding: 19px;
+  background-color: white;
+  border: 2px solid #F4D1AE;
+}
+
 header {
   z-index: 999;
   transition: all 0.5s ease-in-out;
@@ -721,11 +728,11 @@ header {
   font-size: 14px;
   line-height: 16px;
   color: #0C3046;
-  padding: 5px 0 5px 53px;
+  padding: 5px 26px;
 }
 @media only screen and (max-width: 1400px) {
   .nav-item {
-    padding: 5px 0 5px 28px;
+    padding: 5px 14px;
   }
 }
 
@@ -773,7 +780,7 @@ header {
   background-position: center;
   width: 16px;
   height: 16px;
-  margin-top: 2px;
+  margin-top: -1px;
 }
 
 .dropdown-menu {
@@ -1436,11 +1443,6 @@ header {
     margin-bottom: 0;
   }
 }
-.gallery img {
-  padding: 19px;
-  background-color: white;
-  border: 2px solid #F4D1AE;
-}
 @media only screen and (max-width: 991px) {
   .gallery img {
     margin: 0 auto 35px;
@@ -1637,13 +1639,6 @@ header {
 .videos__slider h3 {
   margin-bottom: 40px;
 }
-.before-after__slider .carousel-item,
-.videos__slider .carousel-item {
-  background: white;
-  padding: 15px;
-  border: 1px solid #F4D1AE;
-}
-
 .slider__handlers {
   display: flex;
   justify-content: flex-end;
@@ -1710,4 +1705,62 @@ header {
 
 .accordion-item:last-of-type .accordion-button.collapsed {
   margin-bottom: 0px;
+}
+
+.face-banner {
+  background-image: url(/assets/images/face/banner.png);
+  padding-bottom: 125px;
+}
+
+.face {
+  margin-bottom: 150px;
+}
+@media only screen and (max-width: 991px) {
+  .face {
+    margin-bottom: 80px;
+  }
+}
+.face .container {
+  padding: 95px 50px;
+  background-color: #FAF6F2;
+  margin: 0 0 0 auto;
+}
+@media only screen and (max-width: 1200px) {
+  .face .container {
+    margin: 0 auto;
+  }
+}
+@media only screen and (max-width: 991px) {
+  .face .container {
+    padding: 60px 30px;
+  }
+}
+.face .container:last-of-type {
+  border: 0px;
+}
+.face img {
+  margin: 0 auto;
+  display: block;
+}
+
+.face__inner h2 {
+  margin-bottom: 25px;
+}
+
+.face__gallery {
+  margin-top: 25px;
+}
+.face__gallery span {
+  text-align: center;
+  width: 250px;
+  font-size: 18px;
+  display: block;
+  margin: 0 auto;
+  margin: 20px auto 30px;
+  line-height: 26px;
+}
+@media only screen and (max-width: 767px) {
+  .face__gallery span {
+    font-size: 14px;
+  }
 }
