--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -11,3 +11,4 @@
 @import "./components/philosophy";
 @import "./components/skincare";
 @import "./components/face";
+@import "./components/futNfue";
