Male Breast structure & css

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -101,6 +101,7 @@ header {
             .dropdown-item {
                 padding: 0 0 0px;
                 margin-bottom: 0px;
+                border: 0;
             }
         }
     }
