--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -696,7 +696,7 @@ strong, b {
 .videos__slider .carousel-item, .gallery img {
   padding: 19px;
   background-color: white;
-  border: 2px solid #F4D1AE;
+  border: 1px solid #F4D1AE;
 }
 
 header {
@@ -795,6 +795,7 @@ header {
 .dropdown-menu li:last-child .dropdown-item {
   padding: 0 0 0px;
   margin-bottom: 0px;
+  border: 0;
 }
 .dropdown-menu::after {
   content: "";
@@ -1556,44 +1557,72 @@ header {
 }
 
 .skincare,
-.futNfue {
+.futNfue,
+.male-breast {
   margin-bottom: 150px;
 }
 @media only screen and (max-width: 991px) {
   .skincare,
-.futNfue {
+.futNfue,
+.male-breast {
     margin-bottom: 80px;
   }
 }
 .skincare .container,
-.futNfue .container {
+.futNfue .container,
+.male-breast .container {
   padding: 95px 50px;
   background-color: #FAF6F2;
   margin: 0 0 0 auto;
 }
 @media only screen and (max-width: 1200px) {
   .skincare .container,
-.futNfue .container {
+.futNfue .container,
+.male-breast .container {
     margin: 0 auto;
   }
 }
 @media only screen and (max-width: 991px) {
   .skincare .container,
-.futNfue .container {
+.futNfue .container,
+.male-breast .container {
     padding: 60px 30px;
   }
 }
 .skincare .container:last-of-type,
-.futNfue .container:last-of-type {
+.futNfue .container:last-of-type,
+.male-breast .container:last-of-type {
   border: 0px;
 }
+.skincare img,
+.futNfue img,
+.male-breast img {
+  display: block;
+  margin: 0 0 0 auto;
+}
+@media only screen and (max-width: 767px) {
+  .skincare img,
+.futNfue img,
+.male-breast img {
+    margin: 0 auto;
+  }
+}
 
+@media only screen and (max-width: 767px) {
+  .skincare__inner,
+.futNfue__inner,
+.male-breast__inner {
+    margin-bottom: 25px;
+  }
+}
 .skincare__inner h3,
-.futNfue__inner h3 {
+.futNfue__inner h3,
+.male-breast__inner h3 {
   margin-bottom: 20px;
 }
 .skincare__inner div,
-.futNfue__inner div {
+.futNfue__inner div,
+.male-breast__inner div {
   margin-top: 40px;
   padding-top: 40px;
   border-top: 1px solid #F4D1AE;
@@ -1676,9 +1705,20 @@ header {
 .QnA {
   margin-top: 50px;
 }
+.QnA h2 {
+  margin-bottom: 25px;
+}
+.QnA ul p {
+  font-size: 16px;
+  line-height: 24px;
+  margin-top: 5px;
+}
+.QnA ul:last-child p {
+  margin-bottom: 0;
+}
 
 .accordion-button {
-  padding: 10px 20px 10px 35px;
+  padding: 0px 20px 0px 35px;
   border-top: 1px solid #F4D1AE;
   border-bottom: 1px solid #F4D1AE;
   margin-bottom: 20px;
@@ -1786,5 +1826,10 @@ header {
 
 .breast-banner {
   background-image: url(/assets/images/face/banner.png);
+  padding-bottom: 125px;
+}
+
+.maleBreast-banner {
+  background-image: url(/assets/images/maleBreast/banner.png);
   padding-bottom: 125px;
 }
