--- a/src/scss/components/_skincare.scss
+++ b/src/scss/components/_skincare.scss
@@ -4,7 +4,8 @@
 }
 
 .skincare,
-.futNfue {
+.futNfue,
+.male-breast {
     margin-bottom: 150px;
 
     @media only screen and (max-width: $md) {
@@ -28,10 +29,24 @@
             border: 0px;
         }
     }
+
+    img {
+        display: block;
+        margin: 0 0 0 auto;
+
+        @media only screen and (max-width: $sm) {
+            margin: 0 auto;
+        }
+    }
 }
 
 .skincare__inner,
-.futNfue__inner {
+.futNfue__inner,
+.male-breast__inner {
+    @media only screen and (max-width: $sm) {
+        margin-bottom: 25px;
+    }
+
     h3 {
         margin-bottom: 20px;
     }
@@ -130,10 +145,28 @@
 
 .QnA {
     margin-top: 50px;
+
+    h2 {
+        margin-bottom: 25px;
+    }
+
+    ul {
+        p {
+            font-size: 16px;
+            line-height: 24px;
+            margin-top: 5px;
+        }
+
+        &:last-child {
+            p {
+                margin-bottom: 0;
+            }
+        }
+    }
 }
 
 .accordion-button {
-    padding: 10px 20px 10px 35px;
+    padding: 0px 20px 0px 35px;
     border-top: 1px solid $wheat;
     border-bottom: 1px solid $wheat;
     margin-bottom: 20px;
